[package]
name = "cgp-reth-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth" }
alloy-primitives = "0.5"

serde = "1.0.193"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.108"
